Update make.jl and .travis.yml for Julia 1.0 & Documenter 0.21

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ os:
   - linux
 
 julia:
-  - 0.7
+  - 1.0
 
 notifications:
   email: false
 
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.add("Documenter"); include("make.jl")'
+  - julia --project -e 'using Pkg; Pkg.instantiate(); include("make.jl")'
