Run CI on 'source' branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: CI
+name: Documenter build
 
 on:
   push:
     branches:
-      - 'master'
+      - 'source'
     tags: '*'
   pull_request:
 
