--- a/.github/workflows/documenter.yml
+++ b/.github/workflows/documenter.yml
@@ -1,4 +1,4 @@
-name: Documenter build
+name: Documenter
 
 on:
   push:
@@ -9,7 +9,6 @@ on:
 
 jobs:
   build:
-    name: Page build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
